# kzorp

./: .gitignore  .gitmodules  .travis.yml  COPYRIGHT  HACKING  HACKING.md  Makefile  Makefile.am  Makefile.old  README  VERSION  autogen.sh  balabit-build  configure.ac  kzorp.1  kzorp_core.c  kzorp_ext.c  xt_KZORP.c  xt_service.c
attic/: Kbuild  Kconfig
daemon/: Makefile.am  kzorpd
debian/: .gitignore  changelog  control  copyright  kzorp-dkms.dkms  kzorp-dkms.dkms.in  kzorp-utils.cron.d  kzorp-utils.dirs  kzorp-utils.files  kzorp.manpages  kzorpd.init  kzorpd.postinst  python-kzorp.pyinstall  rules
driver/: .gitignore  Makefile  kz_tproxy_core.h  kzorp.h  kzorp_compat.h  kzorp_core.c  kzorp_ext.c  kzorp_internal.h  kzorp_lookup.c  kzorp_lookup_internal.h  kzorp_netlink.c  kzorp_netlink.h  kzorp_sockopt.c  kzorp_sockopt.h  nf_conntrack_netlink_kzorp.c  xt_KZORP.c  xt_KZORP.h  xt_rule.c  xt_rule.h  xt_service.c  xt_service.h  xt_socket.c  xt_socket_kzorp.c  xt_zone.c  xt_zone.h
driver/include/linux/netfilter/: xt_socket_kzorp.h
driver/include/net/netfilter/: kzorp_lookup_internal.h
driver/net/netfilter/: Makefile  kzorp_core.c  kzorp_ext.c  kzorp_sockopt.c
driver/tests/: Makefile.am  kmemleak2junit.py  run_kzorp_unit_tests.sh
driver/tests/base/: KZorpBaseTestCaseDispatchers.py  KZorpComm.py  testutil.py
driver/tests/communication/: KZorpBaseTestCaseBind.py  KZorpBaseTestCaseDispatchers.py  KZorpComm.py  KZorpTestCaseDispatchers.py  KZorpTestCaseZones.py  Makefile.am  testutil.py
driver/tests/query/: KZorpTestCaseQueryNDim.py  Makefile.am
end-to-end-test/: Makefile  hostnet  imgsetup
end-to-end-test/initrd/: initramfs.conf  test_zorp-kzorp_policy.py
include/: kzorp.h  kzorp_lookup_internal.h  kzorp_netlink.h  kzorp_sockopt.h
include/linux/netfilter/: kzorp.h  kzorp_sockopt.h  xt_service.h  xt_zone.h
include/net/netfilter/: kzorp_compat.h  kzorp_internal.h  kzorp_lookup_internal.h
iptables/: .gitignore  Makefile.am  configure.ac
iptables/extensions/: Makefile  libxt_KZORP.c  libxt_service.c  libxt_service.man  libxt_zone.c
iptables/include/linux/: xt_KZORP.h
iptables/src/: libxt_KZORP.c  libxt_KZORP.man  libxt_ifgroup.c  libxt_ifgroup.man  libxt_service.c  libxt_zone.c  libxt_zone.man
iptables/src/include/linux/netfilter/: xt_KZORP.h  xt_ifgroup.h  xt_service.h  xt_zone.h
kernel-module/: Makefile  README  buildmatrix  dkms.conf  dkms.conf.in  kzorp_core.c  kzorp_ext.c  kzorp_lookup.c  kzorp_netlink.c  kzorp_sockopt.c  xt_KZORP.c  xt_service.c  xt_zone.c
kernel-module/include/: kzorp_internal.h  kzorp_lookup_internal.h  xt_KZORP.h
kernel-module/tests/: .gitignore  100000rules_policy.py  Makefile  exerciser  get_kzorp_result.c  helper  imgsetup  kzorp.expected  kzorp_rule_generator.py  perf_measure.c  policy.py  rand-lfsr258.h  sort.c  test.h  test_ext.c  test_ipv6_radix.c  test_kzorp_lookup.c  test_kzorp_sockopt.py  test_mocks.c  test_ndim_eval.c
kernel-module/tests/initrd/: group  initramfs.conf  iptables  iptables.empty  test_zorp-kzorp_policy.py
kernel-module/tests/pytests/: KZorpBaseTestCaseBind.py  KZorpBaseTestCaseDispatchers.py  KZorpBaseTestCaseQuery.py  KZorpBaseTestCaseZones.py  KZorpComm.py  KZorpTestCaseDispatchers.py  KZorpTestCaseQueryNDim.py  KZorpTestCaseServices.py  KZorpTestCaseTransaction.py  KZorpTestCaseZones.py  testall.py  testutil.py
kzorp/: Makefile.am
kzorp/include/: Makefile.am
kzorp/include/linux/netfilter/: Makefile.am
kzorp/include/net/netfilter/: Makefile.am
net/netfilter/: Makefile  buildmatrix  buildversions  dkms.conf.in  kzorp_core.c  kzorp_ext.c  kzorp_lookup.c  kzorp_netlink.c  kzorp_sockopt.c  proxy-Makefile  xt_KZORP.c  xt_service.c  xt_zone.c
net/netfilter/tests/: 100000rules_policy.py  Makefile  kzorp_rule_generator.py  perf_measure.c  policy.py  test.h  test_ext.c  test_kzorp_dump.sh  test_kzorp_sockopt.py  test_mocks.c  test_mocks.h  test_ndim_eval.c
net/netfilter/tests/pytests/: KZorpBaseTestCaseBind.py  KZorpComm.py  KZorpTestCaseDispatchers.py
pylib/: KZorp.py  Makefile.am
pylib/Zorp/: DynamicZoneHandler.py  KZorp.py  Makefile.am
pylib/kzorp/: Makefile.am  communication.py  kzorp.py  kzorp_netlink.py  messages.py  netlink.py  setup.py  zoneupdate.py
pylib/kzorp/kzorp/: kzorp_netlink.py  netlink.py
rpm/: kzorp.spec  kzorpd.service
scripts/: Makefile.am  kzorp-client  kzorp-stats-updater  kzorpd
tests/: Makefile  Makefile.am  README.imgtest  imgrun  imgsetup  imgtest  kzorp-dzs-baseline  kzorp_rule_generator.py  outtest  rand-lfsr258.c  rand-lfsr258.h  test_ext.c  test_ipv6_radix.c  test_kzorp.py  test_kzorp_dump.sh
tests/communication/: KZorpBaseTestCaseDispatchers.py  KZorpBaseTestCaseZones.py  KZorpComm.py  KZorpTestCaseDispatchers.py  KZorpTestCaseServices.py  KZorpTestCaseTransaction.py  KZorpTestCaseVersion.py  KZorpTestCaseZones.py  Makefile.am  testall.py
tests/initrd/: passwd
tests/kzorp/: test_zone_handler.py
tests/pytests/: KZorpBaseTestCaseDispatchers.py  KZorpBaseTestCaseQuery.py  KZorpBaseTestCaseZones.py  KZorpTestCaseDispatchers.py  KZorpTestCaseServices.py  testall.py
tests/query/: KZorpTestCaseQueryNDim.py  Makefile.am
